transition colour change

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <div class="container is-widescreen">
       <article id="vidarticle" class="message">
-        <div id="message" class="message-header">
+        <div id="message" class="message-header" style="transition: background-color 1s ease-out">
           <p>Looking....</p>
           
         </div>
